        * src/compat/jlib.erl : API renaming :
                make_jid -> make ;
                parse_jid -> parse ;
        * src/core/exmpp_jid.erl : API renaming :
                make_jid -> make ;
                jid_to_bare_jid -> bare ;
                bare_jid_to_jid -> full ;
                parse_jid -> parse ;
                ldomain -> prep_domain ;
        * src/core/exmpp_stanza.erl : API renaming :
                parse_jid -> parse ;
        * testsuite/jid.erl : API renaming :
                make_jid -> make ;
                jid_to_bare_jid -> bare ;
                bare_jid_to_jid -> full ;
                parse_jid -> parse ;
                ldomain -> prep_domain ;

2009-05-17  Mickael Remond  <mremond@process-one.net>

	* src/core/exmpp_xmlstream.erl: Add option to remove enclosing Bosh tag
	(body).

	* src/network/exmpp_bosh.erl: Preliminary bosh support (XEP-0124).
	* src/network/exmpp_session.erl: Likewise.

	* examples/bosh_client.erl: Example / test bosh client.

2009-04-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_presence.erl (set_type/2, set_show/2): Instead of
	just checking if the argument is valid, use the 'case' to convert the
	arguemnt to binary() too.

	* src/core/exmpp_message.erl: Add contracts.
	(set_type/2): Support binary() and string() correctly.
	(set_subject/2, set_body/2, set_thread/2): Treat the empty_binary()
	before the empty string() because now, binary() is the primary data
	type in exmpp.

	* src/core/exmpp_stream.erl: Fix documentation. Add contracts. Remove
	?STREAM_NS_PREFIX in favor of ?NS_XMPP_pfx. To obtain a random ID, use
	the 'random' atom, not 'undefined' as before.
	(serialize_version/1): Return a binary() for consistency's sake.

	* TODO, doc/overview.edoc: Update TODO to remember to rework
	exmpp_xml:node_to_iolist/3.

2009-04-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_presence.erl: Add contracts. Fix documentation.